[gd_scene load_steps=4 format=3 uid="uid://cdft2vyuw2clm"]

[ext_resource type="Texture2D" uid="uid://bnjpnoyp5ydg8" path="res://Art/Revised/Collectable coin.png" id="1_1dosf"]
[ext_resource type="Script" uid="uid://c888s5t5g5ei4" path="res://Scripts/New/coin.gd" id="1_kn0d1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kerce"]
radius = 8.0

[node name="collectableCoin" type="Node2D" groups=["Coin"]]
script = ExtResource("1_kn0d1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kerce")
disabled = true

[node name="CollectableCoin" type="Sprite2D" parent="."]
texture = ExtResource("1_1dosf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
